Implement generic action sell and enhance flows
